--- a/homepage.html
+++ b/homepage.html
@@ -33,9 +33,10 @@
 		<label class = "title" width="100%">How do you feel today?</label>
 		
 		<br>
-		<label class = "summary"> "The human body has been designed to <br> resist an infinite number of changes <br> and attacks brought about by its <br> environment. The secret of good <br> health lies in successful <br> adjustment to changing stresses on the body.” – Harry J. Johnson”;</label>
+		<label class = "summary"> "The human body has been designed <br> to resist an infinite number of changes <br> and attacks brought about by its <br> environment. The secret of good <br> health lies in successful adjustment <br> to changing stresses on the body.” <br> – Harry J. Johnson”;</label>
 		<br>
-
+		<br>
+		<br>
 		<div class= "multi-selector">
 		<div class = "select-field">
 			<label class = "summary" style = "color:blue">Your most recent entries</label>
