--- a/insight.html
+++ b/insight.html
@@ -12,11 +12,12 @@
 </head>
 <br>
 <body style="background:#f0effa;display: grid;" >
+	<p class = "profilename" onload = "disclaimer()"></p>
 	
     <div class = "contentwrap">
 	<div class = "wrapper" id = "profileinfo">
 		<div class ="profile">
-			<div class = "username" onload = "disclaimer()">Insights & Correlations</div>
+			<div class = "username">Insights & Correlations</div>
 			
 		</div>
 
