--- a/homepage.html
+++ b/homepage.html
@@ -36,10 +36,9 @@
 		<label class = "summary"> "The human body has been designed <br> to resist an infinite number of changes <br> and attacks brought about by its <br> environment. The secret of good <br> health lies in successful adjustment <br> to changing stresses on the body.” <br> – Harry J. Johnson</label>
 		<br>
 		<br>
-		<br>
 		<div class= "multi-selector">
 		<div class = "select-field">
-			<label class = "summary" style = "color:blue">Your most recent entries</label>
+			<label class = "summary" style = "color:purple">Your most recent entries</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "height: 200px;">
@@ -72,6 +71,12 @@
 							physical
 						</label>
 				</label>
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
+					November 6th 2021
+					<label class = "type-of-log">
+						physical
+					</label>
+			</label>
 				 
 			</div>
 		</div>
