--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
 
 	</div>
 	<div class = profilepic>
-			<img class = "logo" src="matthew.png" width = "70px">
+			<img class = "logo" src="matthew.png" width = "60px">
 		</div>
 </div>
 <div id = "column">
@@ -38,7 +38,7 @@
 		<br>
 		<div class= "multi-selector">
 		<div class = "select-field">
-			<label class = "summary" style = "color:purple">Your most recent entries</label>
+			<label class = "summary" style = "color:#9251F7">Your most recent entries</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "height: 200px;">
@@ -83,7 +83,7 @@
 		
 		<a class="gradient-button gradient-button-2" href ="#" id="log">Log your symptoms</a><br />
 		<div class = "avatar">
-			<img class="logo" src="avatar.png" width = "100px">
+			<img class="logo" src="avatar.png" width = "120px">
 		</div>
 	</div>
 </div>
