--- a/homepage.html
+++ b/homepage.html
@@ -71,6 +71,12 @@
 							physical
 						</label>
 				</label>
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
+					November 6th 2021
+					<label class = "type-of-log">
+						physical
+					</label>
+			</label>
 				 
 			</div>
 		</div>
