--- a/insight.html
+++ b/insight.html
@@ -282,14 +282,12 @@
 	   }
 	 }
 
-	 $(document).ready(function () {
-        disclaimer();
-     });
-
 	 function disclaimer()
 	 {
 		 alert("A friendly reminder: correlations do not implicate causation. Be sure to check with you doctor for more details regarding your symptoms.");
 	 }
+
+	 window.onload = disclaimer;
    
 
     </script>
