--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
 	<div class = "contentwrap" id = "tab1">
 	<div class = "contentwrap">
 	<div class = "wrapper" id = "checkup">
-		<label class = "profilename" style="color: purple;">Check up</label>
+		<label class = "profilename" style="color: #9251F7;">Check up</label>
 		
 
 		<label class = "title" width="100%">How do you feel today?</label>
@@ -92,7 +92,7 @@
 	
 	<div class="contentwrap" id = "tab2">
 	<div class = "wrapper" id = "goals">
-		<label class = "profilename" style="color: red;">Goals overview</label>
+		<label class = "profilename" style="color:#f05c00;">Goals overview</label>
 		<label class = "title">You have 4 active goals</label><br>
 		<a href = "#" style = "color: grey;">Click to see more</a>
 		<div class = "goalstab">
@@ -118,7 +118,7 @@
 			
 		</div>
 		<div class = "wrapper" id = "insights">
-			<label class = "profilename">Insights</label>
+			<label class = "profilename" style="color: #019055;">Insights</label>
 			<label class = "title" width="100%">Positive correlation between exercise and sleep</label>
 			<br>
 			<div class = "insight">
