--- a/insight.html
+++ b/insight.html
@@ -284,7 +284,7 @@
 
 	 function disclaimer()
 	 {
-		 alert("A friendly reminder: correlations do not implicate causation. Be sure to check with you doctor for more details regarding your symptoms.");
+		 alert("A friendly reminder: correlations do not implicate causation. Be sure to check with your doctor for more details regarding your symptoms.");
 	 }
 
 	 window.onload = disclaimer;
