--- a/experiments.html
+++ b/experiments.html
@@ -60,7 +60,16 @@
 			<br>
 			<br>
 
-			
+			<div class="field">
+				<div class = fieldname>
+				  <label class = "summary">Age</label>
+				</div>
+				<input type="number" placeholder="Age" required style="width:65%;" id = "Age">
+				<div class = "ageselect">
+				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
+				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
+				</div>
+		   </div>
 
 
 			<div class = "avatar" style = "top:8px; left:400px">
@@ -120,8 +129,9 @@
 
 
 	<script>	
-		var selected = false;
-		var id = 0;
+		var age = document.getElementById("Age");
+		var aplus = document.getElementById("a+");
+		var aminus = document.getElementById("a-");
 
 		var experimentTitles = [
 				"Increasing sleep time",
@@ -144,6 +154,31 @@
 			docem.value = "";
 			docnum.value = "";
 	   }
+
+	   function addAge() 
+	   {
+		   aplus.className = "activelayer";
+           aminus.className = "agelayer";
+           var a;
+
+           if(Age.value == "") {a = 0;}
+           else {a = parseInt(Age.value);}
+          
+           Age.value = a+1;
+        }
+
+   	 	function subtractAge() 
+		{
+			aminus.className = "activelayer";
+            aplus.className = "agelayer";
+            var a;
+
+            if(Age.value == "") {a = 0;}
+            else {a = parseInt(Age.value);}
+
+            if(a < 1) {aminus.className = "agelayer";}
+            else {Age.value = a-1;}
+		}
 
 	   
 	   function refreshExperiment()
