--- a/experiments.html
+++ b/experiments.html
@@ -63,11 +63,7 @@
 			<br>
 
 			<div class="field">
-				<div class = fieldname>
-				  <label class = "summary">Age</label>
-				</div>
-
-				<input type="number" placeholder="Age" required style="width:65%;" id = "Age">
+				<input type="number" placeholder="" required style="width:65%;" id = "Age">
 
 				<div class = "ageselect">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
