--- a/experiments.html
+++ b/experiments.html
@@ -194,7 +194,7 @@
 	    }
 
 		function backButton(){
-        	window.open("insight.html?#");
+        	window.location.href='insight.html?#';
     	}
 
 		function confirmExperiment(){
