--- a/experiments.html
+++ b/experiments.html
@@ -62,8 +62,8 @@
 			<br>
 			<br>
 
-			<div class="field">
-				<input type="number" placeholder="" required style="width:65%;" id = "Age">
+			<div class="field" style = "background-color:gray;">
+				<input type="number" placeholder="Type here or enter a number using the buttons on the right" required style="width:65%;" id = "Age">
 
 				<div class = "ageselect">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
@@ -129,6 +129,8 @@
 
 
 	<script>	
+		var age = 0;
+
 		var age = document.getElementById("Age");
 		var aplus = document.getElementById("a+");
 		var aminus = document.getElementById("a-");
@@ -194,7 +196,7 @@
 	    }
 
 		function backButton(){
-        	window.location.href='insight.html?#';
+        	window.open("insight.html?#");
     	}
 
 		function confirmExperiment(){
