--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Nov 25 2021 10:25:21 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Nov 26 2021 05:26:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="619c3dfcf650fa45d6c3915b" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -55,6 +55,9 @@
     </div>
     <div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb2-d6c3915b" class="profile-wrapper"><img src="images/matthew-p-500.png" loading="lazy" width="60" sizes="60px" srcset="images/matthew-p-500-p-500.png 500w, images/matthew-p-500.png 775w" alt="" class="image"></div>
     <div id="w-node-b3f8fae8-b2b2-649e-95f3-b88f10a734e4-d6c3915b" class="_3d-human-widget-wrapper long">
+      <h1 class="step-text-3">Step 3</h1>
+      <h1 class="step-text-2">Step 2</h1>
+      <h1 class="step-text-1">Step 1</h1>
       <div class="directions">
         <h1 class="selected-part-name">Select a body part</h1>
         <h1 class="part-name">Hovered part</h1>
@@ -147,7 +150,7 @@
         </a>
         <a id="general-symptom-button-body" data-w-id="3079750d-b15a-0e31-25ad-91f83011f800" href="#" class="general-symptoms body w-inline-block">
           <div class="general-symptom-text body">General body</div>
-        </a><img src="images/Screen-Shot-2021-11-20-at-11.26.49-PM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1068px" srcset="images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-500.png 500w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-800.png 800w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1080.png 1080w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1600.png 1600w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-2000.png 2000w, images/Screen-Shot-2021-11-20-at-11.26.49-PM.png 2466w" alt="" class="body-img">
+        </a><img src="images/Screen-Shot-2021-11-20-at-11.26.49-PM.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-500.png 500w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-800.png 800w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1080.png 1080w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1600.png 1600w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-2000.png 2000w, images/Screen-Shot-2021-11-20-at-11.26.49-PM.png 2466w" alt="" class="body-img">
       </div>
       <div id="head" data-w-id="6a4d3d22-c8d3-5746-2d39-8c01ccad34a0" class="head-detail">
         <a id="left-eye" part-name="Right eye" data-w-id="6a4d3d22-c8d3-5746-2d39-8c01ccad34a5" href="#" class="body-part head-detailed right-eye w-inline-block">
@@ -200,7 +203,7 @@
               </g>
             </svg></div>
         </a>
-        <a part-name="Left jaw" href="#" class="body-part head-detailed left-jaw w-inline-block">
+        <a part-name="Left jaw" data-w-id="3b4f5d9a-534d-59fb-9037-88fce9882063" href="#" class="body-part head-detailed left-jaw w-inline-block">
           <div class="body-embed w-embed"><svg xmlns="http://www.w3.org/2000/svg" class="part" width="100%" height="100%" viewbox="0 0 103.34 143.82">
               <defs></defs>
               <g id="Layer_2" data-name="Layer 2">
@@ -210,7 +213,7 @@
               </g>
             </svg></div>
         </a>
-        <a part-name="Right jaw" href="#" class="body-part head-detailed right-jaw w-inline-block">
+        <a part-name="Right jaw" data-w-id="63f87ce6-6966-ca40-8b3d-36c0b5474308" href="#" class="body-part head-detailed right-jaw w-inline-block">
           <div class="body-embed w-embed"><svg xmlns="http://www.w3.org/2000/svg" class="part" width="100%" height="100%" viewbox="0 0 103.34 143.82">
               <defs></defs>
               <g id="Layer_2" data-name="Layer 2">
@@ -249,7 +252,7 @@
                 </g>
               </g>
             </svg></div>
-        </a><img src="images/head.png" loading="lazy" sizes="100vw" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
+        </a><img src="images/head.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1068px" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
         <a id="general-symptom-button-head" data-w-id="5952b97a-a0ab-a95f-01c4-f36c96e1795b" href="#" class="general-symptoms head w-inline-block">
           <div class="general-symptom-text head">General head</div>
         </a>
@@ -3123,7 +3126,7 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-d6c3915b" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+        <a href="index.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
@@ -3131,20 +3134,19 @@
       </div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-d6c3915b" class="nav-wrapper">
-     <a href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a data-w-id="3821abbf-b962-d39f-49b6-211c02815d11" href="http://../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-     <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
+      <a href="index.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
-      <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="http://../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Goals</div>
       </a>
-      <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="http://../insights.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Insights</div>
       </a>
-     
-      <a href="../profile.html" class="nav-buttons w-inline-block last"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="http://../profile.html" class="nav-buttons last w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Log History</div>
       </a>
     </div>
