--- a/experiments.html
+++ b/experiments.html
@@ -62,10 +62,10 @@
 			<br>
 			<br>
 
-			<div class="field" style = "background-color:gray;">
+			<div class="field">
 				<input type="number" placeholder="Type here or enter a number using the buttons on the right" required style="width:65%;" id = "Age">
 
-				<div class = "ageselect">
+				<div class = "ageselect" style = "background-color:rgb(224, 224, 224);">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
 				</div>
