--- a/experiments.html
+++ b/experiments.html
@@ -63,9 +63,9 @@
 			<br>
 
 			<div class="field">
-				<input type="number" placeholder="Type here or enter a number using the buttons on the right" required style="width:65%;" id = "Age">
+				<input type="number" placeholder="" required style="width:65%;" id = "Age">
 
-				<div class = "ageselect" style = "background-color:rgb(224, 224, 224);">
+				<div class = "ageselect">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
 				</div>
@@ -129,8 +129,6 @@
 
 
 	<script>	
-		var age = 0;
-
 		var age = document.getElementById("Age");
 		var aplus = document.getElementById("a+");
 		var aminus = document.getElementById("a-");
@@ -196,7 +194,7 @@
 	    }
 
 		function backButton(){
-        	window.open("insight.html?#");
+        	window.location.href='insight.html?#';
     	}
 
 		function confirmExperiment(){
