--- a/experiments.html
+++ b/experiments.html
@@ -63,9 +63,7 @@
 			<br>
 
 			<div class="field">
-				<input type="number" placeholder="" required style="width:65%;" id = "Age">
-
-				<div class = "ageselect">
+				<div class = "ageselect" style = "background-color:rgb(224, 224, 224);">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
 				</div>
@@ -129,6 +127,8 @@
 
 
 	<script>	
+		var age = 0;
+
 		var age = document.getElementById("Age");
 		var aplus = document.getElementById("a+");
 		var aminus = document.getElementById("a-");
@@ -194,7 +194,7 @@
 	    }
 
 		function backButton(){
-        	window.location.href='insight.html?#';
+        	window.open("insight.html?#");
     	}
 
 		function confirmExperiment(){
