--- a/experiments.html
+++ b/experiments.html
@@ -63,6 +63,8 @@
 			<br>
 
 			<div class="field">
+				<input type="number" placeholder="Type here" required style="width:65%; font-size:14px" id = "Age">
+
 				<div class = "ageselect" style = "background-color:rgb(224, 224, 224);">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
