--- a/experiments.html
+++ b/experiments.html
@@ -65,7 +65,7 @@
 			<div class="field">
 				<input type="number" placeholder="Type here" required style="width:65%; font-size:36px" id = "Age">
 
-				<div class = "ageselect" style = "background-color:rgb(224, 224, 224);">
+				<div class = "ageselect">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
 				</div>
