--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 26 2021 05:26:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Nov 26 2021 05:39:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="619c3dfcf650fa45d6c3915b" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -150,7 +150,7 @@
         </a>
         <a id="general-symptom-button-body" data-w-id="3079750d-b15a-0e31-25ad-91f83011f800" href="#" class="general-symptoms body w-inline-block">
           <div class="general-symptom-text body">General body</div>
-        </a><img src="images/Screen-Shot-2021-11-20-at-11.26.49-PM.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-500.png 500w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-800.png 800w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1080.png 1080w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1600.png 1600w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-2000.png 2000w, images/Screen-Shot-2021-11-20-at-11.26.49-PM.png 2466w" alt="" class="body-img">
+        </a><img src="images/Screen-Shot-2021-11-20-at-11.26.49-PM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1068px" srcset="images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-500.png 500w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-800.png 800w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1080.png 1080w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1600.png 1600w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-2000.png 2000w, images/Screen-Shot-2021-11-20-at-11.26.49-PM.png 2466w" alt="" class="body-img">
       </div>
       <div id="head" data-w-id="6a4d3d22-c8d3-5746-2d39-8c01ccad34a0" class="head-detail">
         <a id="left-eye" part-name="Right eye" data-w-id="6a4d3d22-c8d3-5746-2d39-8c01ccad34a5" href="#" class="body-part head-detailed right-eye w-inline-block">
@@ -252,7 +252,7 @@
                 </g>
               </g>
             </svg></div>
-        </a><img src="images/head.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1068px" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
+        </a><img src="images/head.png" loading="lazy" sizes="100vw" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
         <a id="general-symptom-button-head" data-w-id="5952b97a-a0ab-a95f-01c4-f36c96e1795b" href="#" class="general-symptoms head w-inline-block">
           <div class="general-symptom-text head">General head</div>
         </a>
@@ -3128,7 +3128,7 @@
       <div class="start-over-submit">
         <a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
-      	</a>
+        </a>
         <link rel="prefetch" href="/">
         <a href="#" class="submit-entry-button w-button">Submit entry</a>
       </div>
