--- a/experiments.html
+++ b/experiments.html
@@ -64,7 +64,7 @@
 			<br>
 
 			<div class="field">
-				<input type="number" placeholder="Type here" required style="width:10%; font-size:36px" id = "Age">
+				<input type="number" placeholder="0" required style="width:10%; font-size:36px" id = "Age">
 
 				<div class = "ageselect">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
