--- a/experiments.html
+++ b/experiments.html
@@ -60,17 +60,20 @@
 			<br>
 			<br>
 			<br>
+			<label class = "profilename">Run this experiment for</label>
 			<br>
 			<br>
 
 			<div class="field">
-				<input type="number" placeholder="0" required style="width:10%; font-size:36px" id = "Age">
+				<input type="number" placeholder="0" required style="width:15%; font-size:36px" id = "Age">
 
 				<div class = "ageselect">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
 				</div>
 		   </div>
+
+		   <label class = "profilename">weeks</label>
 
 
 			<div class = "avatar" style = "top:8px; left:400px">
