--- a/experiments.html
+++ b/experiments.html
@@ -60,11 +60,11 @@
 			<br>
 			<br>
 			<br>
-			<label class = "profilename">Run this experiment for</label>
+			<label class = "profilename" style = "font-size:36px">Run this experiment for</label>
 			<br>
 			<br>
 
-			<div class="field">
+			<div class="field" style = "height:105%">
 				<input type="number" placeholder="0" required style="width:15%; font-size:36px" id = "Age">
 
 				<div class = "ageselect">
@@ -73,7 +73,7 @@
 				</div>
 		   </div>
 
-		   <label class = "profilename">weeks</label>
+		   <label class = "profilename" style = "font-size:36px">weeks</label>
 
 
 			<div class = "avatar" style = "top:8px; left:400px">
