--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 	</div>
     
 		<div class = profilepic>
-			<div class="button" onclick = "location.href='profileinfo.html';">
+			<div class="button" onclick = "location.href='profileinfo.html?#';">
                 <div class = "icon"><img src="matthew.png" width = "70px"></div>
             </div>
 		</div>
