--- a/experiments.html
+++ b/experiments.html
@@ -62,10 +62,10 @@
 			<label class = "profilename" style = "font-size:24px">Run this experiment for</label>
 			<br>
 
-			<div class="field" style = "height:105%">
+			<div class="field">
 				<input type="number" placeholder="0" required style="width:15%; font-size:36px" id = "Age">
 
-				<div class = "ageselect">
+				<div class = "ageselect" style = "height:105%">
 				  <li id ="a+" class = "agelayer" onclick="addAge()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractAge()"><label class = "prompt">-</label></li>
 				</div>
