--- a/experiments.html
+++ b/experiments.html
@@ -208,7 +208,7 @@
 			if(inputAge)
 				alert("You have successfully registered for this experiment!");
 			else
-				alert("Please enter your")
+				alert("Please enter your age to register this experiment.")
 		}
 
 		function consultDoctor(){
