--- a/experiments.html
+++ b/experiments.html
@@ -205,7 +205,7 @@
     	}
 
 		function confirmExperiment(){
-			if(inputTime > 0)
+			if(parseInt(inputTime) > 0)
 				alert("You have successfully registered for this experiment!");
 			else
 				alert("Please enter your age to register this experiment.")
