--- a/experiments.html
+++ b/experiments.html
@@ -130,7 +130,7 @@
 
 
 	<script>	
-		var inputTime = document.getElementById("agelayer").innerHTML;
+		var inputTime = false;
 
 		var time = document.getElementById("Age");
 		var timePlus = document.getElementById("a+");
@@ -205,7 +205,7 @@
     	}
 
 		function confirmExperiment(){
-			if(parseInt(inputTime) > 0)
+			if(inputTime)
 				alert("You have successfully registered for this experiment!");
 			else
 				alert("Please enter your age to register this experiment.")
