--- a/homepage.html
+++ b/homepage.html
@@ -134,7 +134,7 @@
 				<label class = "summary" width="40%">0.7% - 1.5hr</label>
 				 </div>
 				 <div class = "diagram">
-			                 <img class = "pic" src = "chart1.png" width = "70px"> 
+			                 <img class = "profilepic" src = "chart1.png" width = "100px"> 
 				 </div>
 			</div>
 			<hr>
@@ -150,7 +150,7 @@
 				<label class = "summary" width="40%">0.8% - 13min</label>
 			</div>
 				<div class = "diagram">
-					<img class = "pic" src = "chart1.png" width = "70px"> 
+					<img class = "profilepic" src = "chart2.png" width = "100px"> 
 				 </div>
 			</div>
 			
