--- a/homepage.html
+++ b/homepage.html
@@ -131,7 +131,7 @@
 				
 				<div class = "para">
 				<label class = "title">Sleep</label>
-				<label class = "summary" width="40%">0.7% - 1.5hr</label>
+				<label class = "summary">0.7% - 1.5hr</label>
 				 </div>
 				 <div class = "diagram">
 			                 <img class = "profilepic" src = "chart1.png" width = "100px"> 
@@ -147,7 +147,7 @@
 				</div>
 				<div class = "para">
 				<label class = "title">Exercise</label>
-				<label class = "summary" width="40%">0.8% - 13min</label>
+				<label class = "summary">0.8% - 13min</label>
 			</div>
 				<div class = "diagram">
 					<img class = "profilepic" src = "chart2.png" width = "100px"> 
