--- a/homepage.html
+++ b/homepage.html
@@ -110,7 +110,7 @@
 			</div>
 			<div class="progress-circle-container">
 				<div class = "mini">
-				<div class="progress-circle progress-3"><span>75</span></div> 
+				<div class="progress-circle progress-3"><span>50</span></div> 
 				<label class = "summary">Diet</label>
 			</div>
 			</div>
@@ -118,7 +118,7 @@
 			
 		</div>
 		<div class = "wrapper" id = "insights">
-			<label class = "profilename" style="color: #019055;">Insights</label>
+			<label class = "profilename" style="color: #019055;">Featured insight</label>
 			<label class = "title" width="100%">Positive correlation between exercise and sleep</label>
 			<br>
 			<div class = "insight">
@@ -131,10 +131,10 @@
 				
 				<div class = "para">
 				<label class = "title">Sleep</label>
-				<label class = "summary">0.7% - 1.5hr</label>
+				<label class = "summary">+10% - 1.5hr</label>
 				 </div>
 				 <div class = "diagram">
-			                 <img class = "profilepic" src = "chart1.png" width = "100px"> 
+			                 <img class = "profilepic" src = "chart2.png" width = "120px"> 
 				 </div>
 			</div>
 			<hr>
@@ -147,10 +147,10 @@
 				</div>
 				<div class = "para">
 				<label class = "title">Exercise</label>
-				<label class = "summary">0.8% - 13min</label>
+				<label class = "summary">+15% - 13min</label>
 			</div>
 				<div class = "diagram">
-					<img class = "profilepic" src = "chart2.png" width = "100px"> 
+					<img class = "profilepic" src = "chart2.png" width = "120px"> 
 				 </div>
 			</div>
 			
