--- a/homepage.html
+++ b/homepage.html
@@ -121,7 +121,7 @@
 			<label class = "profilename" style="color: #019055;">Featured insight</label>
 			<label class = "title" width="100%">Positive correlation between exercise and sleep</label>
 			<br>
-			<div class = "insight">
+			<div class = "insight-home">
 				<div class = "illu">
 					<img  class = "pic"src="up.png" width="30px" height="30px">
 				</div>
@@ -138,7 +138,7 @@
 				 </div>
 			</div>
 			<hr>
-			<div class = "insight">
+			<div class = "insight-home">
 				<div class = "illu">
 					<img  class = "pic"src="up.png" width="30px" height="30px">
 				</div>
