--- a/experiments.html
+++ b/experiments.html
@@ -220,7 +220,7 @@
 			if(inputTime)
 				alert("You have successfully registered for this experiment!");
 			else
-				alert("Please enter the number of weeks you'd like to register for this experiment above.")
+				alert("Please enter the number of weeks you'd like to register for this experiment above.");
 		}
 
 		function consultDoctor()
