--- a/experiments.html
+++ b/experiments.html
@@ -225,7 +225,7 @@
 
 		function consultDoctor()
 		{
-			if(!notifed[notifiedIndex])
+			if(!notified[notifiedIndex])
 			{
 				notified[notifiedIndex] = true;
 
