--- a/experiments.html
+++ b/experiments.html
@@ -233,7 +233,7 @@
 			}
 	
 			else
-				alert("You have already notifed your doctor about this experiment.");
+				alert("You have already notified your doctor about this experiment.");
 		}
 
 	</script>
