--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
   <title>Profile</title>
 </head>
 
-<body style="background:#eeedf3;display: grid;">
+<body style="background:#f0effa;display: grid;">
 
 	<div class = "contentwrap">
 	<div class = "wrapper" id = "profileinfo">
