--- a/experiments.html
+++ b/experiments.html
@@ -120,9 +120,9 @@
 			<label>Insight</label>
 		</div>
 			
-		<div class="buttonactive">
+		<div class="button" onclick = "location.href='loghistory.html';">
 			<div class = "icon"><img src="profile.png" width = "30px"></div>
-			<label>Log History</label>
+			<label>Insight</label>
 		</div>
 	</div>
 </div>
