--- a/homepage.html
+++ b/homepage.html
@@ -181,7 +181,7 @@
 				<label>Insight</label>
 			</div>
 			
-			<div class="button last" onclick = "location.href='profile.html';">
+			<div class="button last" onclick = "location.href='loghistory.html';">
 				<div class = "icon"><img src="profile.png" width = "30px"></div>
 				<label>Log History</label>
 			</div>
