--- a/homepage.html
+++ b/homepage.html
@@ -33,7 +33,7 @@
 		<label class = "title" width="100%">How do you feel today?</label>
 		
 		<br>
-		<label class = "summary"> "The human body has been designed <br> to resist an infinite number of changes <br> and attacks brought about by its <br> environment. The secret of good <br> health lies in successful adjustment <br> to changing stresses on the body.” <br> – Harry J. Johnson</label>
+		<label class = "summary" style = "margin-top: 5px"> "The human body has been designed <br> to resist an infinite number of changes <br> and attacks brought about by its <br> environment. The secret of good <br> health lies in successful adjustment <br> to changing stresses on the body.” <br> – Harry J. Johnson</label>
 		<br>
 		<br>
 		<div class= "multi-selector">
