--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -3146,7 +3146,7 @@
       <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Insights</div>
       </a>
-      <a href="../profile.html" class="nav-buttons w-inline-block last"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../loghistory.html" class="nav-buttons w-inline-block last"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Log History</div>
       </a>
     </div>
