--- a/experiments.html
+++ b/experiments.html
@@ -222,7 +222,7 @@
 			if(inputTime || (contents.value != "0" && parseInt(contents.value) === number))
 				alert("You have successfully registered for this experiment!");
 			else
-				alert("Please enter the number (greater than 0) of weeks you'd like to register for this experiment above.");
+				alert("Please enter the number of weeks (greater than 0) you'd like to register for this experiment above.");
 		}
 
 		function consultDoctor()
