--- a/experiments.html
+++ b/experiments.html
@@ -228,7 +228,7 @@
 				if(inputTime || (contents.value != "0" && parseInt(contents.value) === number))
 				{
 					registered[registeredIndex] = true;
-					
+
 					alert("You have successfully registered for this experiment!");
 				}
 
@@ -238,7 +238,7 @@
 
 
 			else
-				alert("You have already registered for this experiment");
+				alert("You have already registered for this experiment.");
 			
 		}
 
