--- a/experiments.html
+++ b/experiments.html
@@ -203,7 +203,7 @@
 	   function refreshExperiment()
 	   {
 		    notifiedIndex = (notifiedIndex + 1) % notified.length;
-			registeredIndex = (registeredIndex + 1) % registered.length
+			registeredIndex = (registeredIndex + 1) % registered.length;
 
 		    nextTitle = (nextTitle + 1) % experimentTitles.length;
 			nextDescription = (nextDescription + 1) % experimentDescriptions.length;
