--- a/experiments.html
+++ b/experiments.html
@@ -225,7 +225,7 @@
 
 			if(!registered[registeredIndex])
 			{
-				if(inputTime || (contents.value != "0" && parseInt(contents.value) === number))
+				if(inputTime || (contents.value != "0" && parseInt(contents.value) === "number"))
 				{
 					registered[registeredIndex] = true;
 
