--- a/experiments.html
+++ b/experiments.html
@@ -123,8 +123,6 @@
 
 
 	<script>	
-		var inputTime = false;
-
 		var notified = [false, false, false];
 		var notifiedIndex = 0;
 
@@ -159,8 +157,6 @@
 
 	   function addWeek() 
 	   {
-		   inputTime = true;
-
 		   timePlus.className = "activelayer";
            timeMinus.className = "agelayer";
 
@@ -175,12 +171,6 @@
 
    	 	function subtractWeek() 
 		{
-			if(time.value > 1)
-				inputTime = true;
-			else
-				inputTime = false;
-
-
 			timeMinus.className = "activelayer";
             timePlus.className = "agelayer";
             var a;
@@ -213,7 +203,7 @@
 		{
 			if(!registered[registeredIndex])
 			{
-				if((time.value != 0 && inputTime) || (time.value != 0 && time.value === 'number'))
+				if(time.value != 0 && time.value === 'number')
 				{
 					registered[registeredIndex] = true;
 
