--- a/experiments.html
+++ b/experiments.html
@@ -213,7 +213,7 @@
 		{
 			if(!registered[registeredIndex])
 			{
-				if((time.value != 0 && inputTime) || (time.value != 0 && time.value === 'number'))
+				if((time.value != 0 && (inputTime || (time.value === 'number'))))
 				{
 					registered[registeredIndex] = true;
 
