--- a/experiments.html
+++ b/experiments.html
@@ -123,8 +123,6 @@
 
 
 	<script>	
-		var inputTime = false;
-
 		var notified = [false, false, false];
 		var notifiedIndex = 0;
 
@@ -134,6 +132,8 @@
 		var time = document.getElementById("time");
 		var timePlus = document.getElementById("a+");
 		var timeMinus = document.getElementById("a-");
+
+		var cycle = 0;
 
 		var experimentTitles = [
 				"Increasing sleep time",
@@ -159,8 +159,6 @@
 
 	   function addWeek() 
 	   {
-		   inputTime = true;
-
 		   timePlus.className = "activelayer";
            timeMinus.className = "agelayer";
 
@@ -175,14 +173,10 @@
 
    	 	function subtractWeek() 
 		{
-			if(time.value > 1)
-				inputTime = true;
-			else
-				inputTime = false;
-
-
 			timeMinus.className = "activelayer";
             timePlus.className = "agelayer";
+
+
             var a;
 
             if(time.value == "") {a = 0;}
@@ -211,10 +205,25 @@
 
 		function confirmExperiment()
 		{
+			var validTime = true;
+
+			if(cycle == 0)
+			{
+				for(i = 0; i < time.length; i++)
+				{
+					if(time.value.charAt(i) === 'string')
+						validTime = false;
+				}
+			}
+			
+
+
 			if(!registered[registeredIndex])
 			{
-				if((time.value > 0 && (inputTime || (time.value === 'number'))))
+				if((time.value > 0 || (time.value === 'number')) || (trueTime.value === 'number' && cycle == 0))
 				{
+					cycle++; 
+
 					registered[registeredIndex] = true;
 
 					alert("You have successfully registered for this experiment!");
