--- a/experiments.html
+++ b/experiments.html
@@ -147,8 +147,8 @@
 
 	var experimentDescriptions = [
 		"In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.",
-		" In this experiment you will try to increase the number of walks you take on average each week to decrease your risk of heart disease.",
-		"In this experiment you will try to adopt a keto diet to promote your metabolic health."
+		"In this experiment you will try to increase the number of walks you take on average each week to decrease your risk of heart disease.",
+		"In this experiment you will try to maintain a keto diet to promote your metabolic health."
 	];
 	var nextDescription = 0;
 
