--- a/experiments.html
+++ b/experiments.html
@@ -58,7 +58,7 @@
 			<div class="field">
 				<input type="number" placeholder="0" required style="width:15%; font-size:31px" id = "time">
 
-				<div class = "ageselect" style = "height:150%">
+				<div class = "ageselect">
 				  <li id ="a+" class = "agelayer" onclick="addWeek()"><label class = "prompt">+</label></li>
 				  <li id ="a-"  class = "agelayer" onclick="subtractWeek()"><label class = "prompt">-</label></li>
 				</div>
